[package]
name = "ic-remix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8"
canister-sdk = {git = "https://github.com/infinity-swap/canister-sdk", branch = "main"}
ic-exports = {git = "https://github.com/infinity-swap/canister-sdk", package = "ic-exports", branch= "main"}
serde = {version = "1.0", features = ["derive"]}